--- a/app/javascript/flavours/glitch/styles/mastodon/components.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon/components.scss
@@ -1533,6 +1533,7 @@ body > [data-popper-placement] {
 
     & > .status__content,
     & > .status__action-bar,
+    & > .reactions-bar,
     & > .media-gallery,
     & > div > .video-player,
     & > .audio-player,
@@ -1789,6 +1790,10 @@ body > [data-popper-placement] {
 
   &-spacer {
     flex-grow: 1;
+  }
+
+  & > .emoji-picker-dropdown > .emoji-button {
+    padding: 0;
   }
 }
 
@@ -5128,6 +5133,10 @@ a.status-card {
 .detailed-status__button {
   flex: 1 1 auto;
   text-align: center;
+}
+
+.detailed-status__button .emoji-button {
+  padding: 0;
 }
 
 .column-settings {
