--- a/app/javascript/flavours/glitch/styles/mastodon/components.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon/components.scss
@@ -11214,7 +11214,7 @@ noscript {
   }
 
   &--reaction &__icon {
-    color: $blurple-300;
+    color: var(--color-text-brand);
   }
 
   &--reblog &__icon {
