--- a/app/views/layouts/embedded.html.haml
+++ b/app/views/layouts/embedded.html.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html{ lang: I18n.locale, 'data-contrast': 'auto', 'data-color-scheme': 'light', 'data-user-flavour': 'glitch' }
+%html{ lang: I18n.locale, 'data-contrast': 'auto', 'data-color-scheme': 'light', 'data-user-flavour': current_flavour.parameterize }
   %head
     %meta{ charset: 'utf-8' }/
     %meta{ name: 'robots', content: 'noindex' }/
