--- a/app/javascript/flavours/glitch/features/account_edit/styles.module.scss
+++ b/app/javascript/flavours/glitch/features/account_edit/styles.module.scss
@@ -3,7 +3,7 @@
   border-top-width: 0;
 }
 
-.header {
+.columnHeader {
   :global(.column-header__buttons) {
     align-items: center;
     padding-inline-end: 16px;
@@ -11,16 +11,100 @@
   }
 }
 
-.nav {
+.profileImage {
+  height: 120px;
+  background: var(--color-bg-secondary);
+  border-bottom: 1px solid var(--color-border-primary);
+  overflow: hidden;
+
+  @container (width >= 500px) {
+    height: 160px;
+  }
+
+  > img {
+    object-fit: cover;
+    object-position: top center;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.avatar {
+  margin-top: -64px;
+  margin-left: 18px;
+  border: 1px solid var(--color-border-primary);
+}
+
+.section {
+  padding: 20px;
+  border-bottom: 1px solid var(--color-border-primary);
+  font-size: 15px;
+}
+
+.sectionHeader {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   gap: 8px;
-  padding: 24px 24px 12px;
+  margin-bottom: 8px;
 
-  > h1 {
-    flex-grow: 1;
-    font-weight: 600;
-    font-size: 15px;
+  > button {
+    border: 1px solid var(--color-border-primary);
+    border-radius: 8px;
+    box-sizing: border-box;
+    padding: 4px;
+
+    svg {
+      width: 20px;
+      height: 20px;
+    }
   }
+}
+
+.sectionTitle {
+  flex-grow: 1;
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.sectionSubtitle {
+  color: var(--color-text-secondary);
+}
+
+.inputWrapper {
+  position: relative;
+}
+
+// Override input styles
+.inputWrapper .inputText {
+  font-size: 15px;
+  padding-right: 32px;
+}
+
+textarea.inputText {
+  min-height: 82px;
+  height: 100%;
+
+  // 160px is approx the height of the modal header and footer
+  max-height: calc(80vh - 160px);
+}
+
+.inputWrapper :global(.emoji-picker-dropdown) {
+  position: absolute;
+  bottom: 10px;
+  right: 8px;
+  height: 24px;
+  z-index: 1;
+
+  :global(.icon-button) {
+    color: var(--color-text-secondary);
+  }
+}
+
+.counter {
+  margin-top: 4px;
+  font-size: 13px;
+}
+
+.counterError {
+  color: var(--color-text-error);
 }
