[Glitch] Collection accounts editor: Show info badge on accounts that haven't posted in over a week
Port 3d332948703c6bb02d8505e5a12ad6676791980c to glitch-soc

Signed-off-by: Claire <claire.github-309c@sitedethib.com>

--- a/app/javascript/flavours/glitch/features/collections/editor/styles.module.scss
+++ b/app/javascript/flavours/glitch/features/collections/editor/styles.module.scss
@@ -86,3 +86,12 @@
   margin-inline: auto;
   gap: 8px;
 }
+
+.accountBadge {
+  margin-inline-start: 56px;
+
+  @container (width < 360px) {
+    margin-top: 4px;
+    margin-inline-start: 46px;
+  }
+}
